--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: 'Delete old artifacts'
 on:
-  #schedule:
-  #  - cron: '0 * * * *' # every hour
+  schedule:
+    - cron: '0 * * * *' # every hour
   workflow_dispatch:  # Permite a execução manual do workflow
 
 jobs:
